# Matcha-for-Milky

./: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  release.yml
flightdeck/: briefing.md  cockpit.md
scripts/: generateReleaseNotes.js
src/: App.vue  auto-imports.d.ts  components.d.ts  styles.css  typed-router.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/installer/: nsis.nsi  wix.wxs
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  models.rs  server.rs  state.rs
src-tauri/src/milky/: mod.rs  server.rs  state.rs
src/adapter/: adapter.ts  behav.test.ts  behav.ts  content.ts  group-file.test.ts  group-file.ts  index.ts  scene.ts
src/commands/: index.ts
src/components/: AboutInfo.vue  AboutView.vue  ActivityPanel.vue  AddContactDialog.vue  AppHeader.vue  AppLogo.vue  AppRail.vue  AppSidebar.vue  AppSidebarManageButton.vue  AppSidebarNavigation.vue  AppTitlebar.vue  ChatTimeline.vue  CheckUpdateDialog.vue  EventComposer.vue  FriendDetailView.vue  GroupDetailView.vue  MainHeader.vue  OverviewStrip.vue  ParameterListInput.vue  PluginManagerView.vue  ScenarioList.vue  ServerConfigPanel.vue
src/composables/: useAppShortcuts.ts
src/database/: db.ts  model.ts
src/driver/: index.ts
src/layouts/: default.vue
src/services/: backend.ts
src/stores/: adapter.ts  connect-settings.ts  general-settings.ts  (+3 more)
tests/: workbench.spec.ts
(+95 files in other folders)
