[package]
name = "fraq-debug"
version = "0.1.0"
description = "A desktop test harness for Fraq plugins"
authors = ["fraq-debug contributors"]
edition = "2024"

[lib]
name = "fraq_debug_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
